<resources>
    <string name="app_name">TEST_Application</string>
    <string name="hello">Hello Android World</string>

    <!--These are shown in first main menu-->
    <string-array name="page_list">
        <item>Some Layouts</item>
        <item>Option and Context</item>
        <item>Fragment</item>
        <item>Data Base</item>
        <item>Camera</item>
        <item>Asynchronous Process</item>
        <item>Web</item>
        <item>GPS</item>
    </string-array>

    <!--SomeLayoutsActivity-->
    <string name="ok">OK</string>
    <string name="cancel">CANCEL</string>
    <string name="progressbar_button">Push</string>
    <string name="btn3">Btn3</string>
    <string name="btn2">Btn2</string>
    <string name="btn1">Btn1</string>
    <string name="input_text">Input Text</string>

    <!--MenuThanksActivity-->
    <string name="tv_thx_title">Order Completed</string>
    <string name="tv_thx_desc">We got the list of order below. \nThank you for your order !!</string>
    <string name="bt_thx_back">Go back to List</string>
    <string name="tv_menu_unit">yen</string>

    <!--OptionAndContextMenu-->
    <string name="menu_option">Menu</string>
    <string name="change_item">Change Item</string>
    <string name="new_item">New Item</string>
    <string name="help">Help</string>
    <string name="context_menu_list_header">Please select control</string>
    <string name="context_menu_list_publisher">Which publisher ?</string>
    <string name="context_menu_list_order">Order</string>
    <string name="hello_fragment">Hello World</string>

</resources>
